@@ -6,6 +6,8 @@ XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 		- Show the Crash Reporter and exit with return code `1` on unhandled
 			exceptions.
 		- Fix crashes in SampleEditor (#2092).
+		- Fix track names in multi track export. When using just the file extension,
+			the raw instrument names will be used (#2096).
 
 2024-12-07 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 	* Release 1.2.4
